# agent-fleet

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent_fleet/: __init__.py  __main__.py  cli.py  config.py
agent_fleet/agents/: __init__.py  codex_runner.py
agent_fleet/domain/: __init__.py  models.py
agent_fleet/orchestrator/: runtime.py  service.py
agent_fleet/persistence/: __init__.py  repository.py  schema.py
agent_fleet/prompts/: __init__.py  policy.py  task_types.py
agent_fleet/prompts/templates/: feature_implementation.md
agent_fleet/prompts/templates/feature_implementation/: git_remote.md  git_repo.md  pr_workflow.md  system.md  task.md
agent_fleet/queue/: __init__.py  fifo.py
docker/: entrypoint.sh
docs/: legacy-archive.md
tests/: test_codex_runner.py  test_enqueue_payload.py  test_fifo_queue.py  test_issue_fetch.py  test_policy.py  test_runtime.py  test_schema.py
