[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-fleet"
version = "0.1.0"
description = "Background coding agent orchestrator foundations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1,<9",
  "rich>=13.7,<14",
  "sqlmodel>=0.0.22,<0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
agent-fleet = "agent_fleet.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
"agent_fleet.prompts" = [
  "templates/feature_implementation/*.md",
]
